// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileInput /> multiple renders 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_7"
  >
    Jawn
  </label>
  <input
    class="field__input"
    id="field_7"
    multiple=""
    type="file"
  />
</div>
`;

exports[`<FileInput /> single renders 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_1"
  >
    Jawn
  </label>
  <input
    class="field__input"
    id="field_1"
    type="file"
  />
</div>
`;

exports[`<FileInput /> single renders with an error 1`] = `
<div
  class="field field--erroneous"
>
  <label
    class="field__label"
    for="field_4"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--erroneous"
    id="field_4"
    type="file"
  />
  <span
    class="message message--problem"
    role="alert"
  >
    Oh no!
  </span>
</div>
`;

exports[`<FileInput /> single renders without a label 1`] = `
<div
  class="field"
>
  <input
    class="field__input"
    id="field_2"
    type="file"
  />
</div>
`;

exports[`<FileInput /> single renders without a wrapper 1`] = `
<input
  class="field__input"
  id="field_3"
  type="file"
/>
`;
